
2017-07-06  Ron Norman <rjn@inglenet.com>

	* tree.c: In cb_build_binary_op just return cb_error_node
	  instead of aborting compile on an invalid 'op' value
	
2017-07-05  Ron Norman <rjn@inglenet.com>

	* codegen.c,typeck.c,error.c,parser.y,tree.c,tree.h: 
	  Updates to skip emiting code for IF, WHEN in cases where
	  the condition is resolved down to TRUE or FALSE at compile time
	  cb_error reports as 'Error (ignored)' when code is not being emitted

2017-07-03  Ron Norman <rjn@inglenet.com>

	* typeck.c: Move check for cb_warn_parentheses to cb_build_expr routine
	 so that the check is done before constant expressions get folded

2017-07-02  Ron Norman <rjn@inglenet.com>

	* field.c: Additional fix so that SYNC with -std=mf works as MF does

2017-06-24  Ron Norman <rjn@inglenet.com>

	* field.c: For COMP-2 and a few other align to 8 byte boundary

2017-06-24  Ron Norman <rjn@inglenet.com>

	* field.c,tree.h: Fixed to carry USAGE, SYNC, SIGN LEADING/TRAILING
	  attributes from group item to elementary data field
	  Fixed SYNC so it aligns the same as Micro Focus on 2 or 4 byte
	  boundary only.

2017-06-22  Ron Norman <rjn@inglenet.com>

	* codgen.c: emit dummy reference to 'frame_overflow' to avoid
	  C compiler warnings

2017-06-13  Ron Norman <rjn@inglenet.com>

	* typeck.c: check for misplaced operators and report error

2017-06-09  Ron Norman <rjn@inglenet.com>

	* ppparse.y,scanner.l: Fix so that OVERRIDE is passed thru the
	  preprocessor to allow variables to be redefined

2017-05-28  Ron Norman <rjn@inglenet.com>

	* field.c,typeck.c: check for misplaced operators in constant expressions

2017-05-26  Ron Norman <rjn@inglenet.com>

	Work on constant values: checks for application 78 versus internal 78
	and allow internal 78 to get handled
	Delete 78-precendence & add constant-01 and constant-78 compile options


2017-05-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	Work on constant values: