@@ -148,7 +148,29 @@ unsigned int	gen_screen_ptr = 0;
 
 static struct cb_report *report_checked = NULL;
 
+static	int	prev_expr_line = 0;
+static	int	prev_expr_pos = 0;
+static	int	prev_expr_warn[4] = {0,0,0,0};
+
 /* Local functions */
+
+static int
+was_prev_warn (int linen)
+{
+	int	i;
+	if (cb_exp_line != prev_expr_line) {
+		prev_expr_line = cb_exp_line;
+		for (i=0; i < 4; i++) 
+			prev_expr_warn[i] = 0;
+	}
+	for (i=0; i < 4; i++) {
+		if (prev_expr_warn[i] == linen)
+			return 1;
+	}
+	prev_expr_pos = (prev_expr_pos + 1) % 4;
+	prev_expr_warn [prev_expr_pos] = linen;
+	return 0;
+}
 
 static size_t
 hash (const unsigned char *s)
@@ -3219,14 +3241,17 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 	struct cb_binary_op	*p;
 	enum cb_category	category = CB_CATEGORY_UNKNOWN;
 	cob_s64_t		xval,yval,rslt;
-	char			result[48];
+	char			result[48],*llit,*rlit;
+	const char		*bop;
 	cb_tree			relop, e;
 	int			i,j, xscale,yscale,rscale;
-	struct cb_literal *xl, *yl;
+	struct cb_literal	*xl, *yl;
 
 	e = relop = cb_any;
 	e->source_file = NULL;
 	e->source_line = cb_exp_line;
+	llit = rlit = NULL;
+	bop = (const char*)NULL;
 
 	switch (op) {
 	case '+':
@@ -3369,6 +3394,11 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 		}
 		xl = (void*)x;
 		yl = (void*)y;
+		if (yl->common.source_line) {
+			e->source_file = yl->common.source_file;
+			e->source_line = yl->common.source_line;
+			e->source_column = yl->common.source_column;
+		}
 		if (CB_REF_OR_FIELD_P (y)
 		&&  CB_FIELD (cb_ref (y))->usage == CB_USAGE_DISPLAY
 		&&  !CB_FIELD (cb_ref (y))->flag_any_length
@@ -3431,6 +3461,13 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 		&&  CB_NUMERIC_LITERAL_P(y)) {
 			xl = (void*)x;
 			yl = (void*)y;
+			if (yl->common.source_line) {
+				e->source_file = yl->common.source_file;
+				e->source_line = yl->common.source_line;
+				e->source_column = yl->common.source_column;
+			}
+			llit = (char*)xl->data;
+			rlit = (char*)yl->data;
 			if(xl->llit == 0
 			&& xl->scale == 0
 			&& yl->llit == 0
@@ -3443,36 +3480,42 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 				yval = atoll((const char*)yl->data);
 				switch(op) {
 				case '=':
+					bop = "EQUALS";
 					if(xval == yval)
 						relop = cb_true;
 					else
 						relop = cb_false;
 					break;
 				case '~':
+					bop = "NOT EQUAL";
 					if(xval != yval)
 						relop = cb_true;
 					else
 						relop = cb_false;
 					break;
 				case '>':
+					bop = "GREATER THAN";
 					if(xval > yval)
 						relop = cb_true;
 					else
 						relop = cb_false;
 					break;
 				case '<':
+					bop = "LESS THAN";
 					if(xval < yval)
 						relop = cb_true;
 					else
 						relop = cb_false;
 					break;
 				case ']':
+					bop = "GREATER OR EQUAL";
 					if(xval >= yval)
 						relop = cb_true;
 					else
 						relop = cb_false;
 					break;
 				case '[':
+					bop = "LESS OR EQUAL";
 					if(xval <= yval)
 						relop = cb_true;
 					else
@@ -3494,6 +3537,13 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 		&& !CB_NUMERIC_LITERAL_P(y)) {
 			xl = (void*)x;
 			yl = (void*)y;
+			if (yl->common.source_line) {
+				e->source_file = yl->common.source_file;
+				e->source_line = yl->common.source_line;
+				e->source_column = yl->common.source_column;
+			}
+			llit = (char*)xl->data;
+			rlit = (char*)yl->data;
 			for(i=j=0; xl->data[i] != 0 && yl->data[j] != 0; i++,j++) {
 				if(xl->data[i] != yl->data[j])
 					break;
@@ -3508,36 +3558,42 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 			}
 			switch(op) {
 			case '=':
+				bop = "EQUALS";
 				if(xl->data[i] == yl->data[j])
 					relop = cb_true;
 				else
 					relop = cb_false;
 				break;
 			case '~':
+				bop = "NOT EQUAL";
 				if(xl->data[i] != yl->data[j])
 					relop = cb_true;
 				else
 					relop = cb_false;
 				break;
 			case '>':
+				bop = "GREATER THAN";
 				if(xl->data[i] > yl->data[j])
 					relop = cb_true;
 				else
 					relop = cb_false;
 				break;
 			case '<':
+				bop = "LESS THAN";
 				if(xl->data[i] < yl->data[j])
 					relop = cb_true;
 				else
 					relop = cb_false;
 				break;
 			case ']':
+				bop = "GREATER OR EQUAL";
 				if(xl->data[i] >= yl->data[j])
 					relop = cb_true;
 				else
 					relop = cb_false;
 				break;
 			case '[':
+				bop = "LESS OR EQUAL";
 				if(xl->data[i] <= yl->data[j])
 					relop = cb_true;
 				else
@@ -3593,15 +3649,23 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 	}
 
 	if (relop == cb_true) {
-		if (cb_warn_constant_expr) {
-			cb_warning_x (e, _("Expression is always TRUE"));
+		if (cb_warn_constant_expr
+		 && !was_prev_warn (e->source_line)) {
+			if(rlit && llit && bop)
+				cb_warning_x (e, _("Expression '%s' %s '%s' is always TRUE"),llit,bop,rlit);
+			else
+				cb_warning_x (e, _("Expression is always TRUE"));
 		}
 		category = CB_CATEGORY_BOOLEAN;
 		return cb_true;
 	}
 	if (relop == cb_false) {
-		if (cb_warn_constant_expr) {
-			cb_warning_x (e, _("Expression is always FALSE"));
+		if (cb_warn_constant_expr
+		 && !was_prev_warn (e->source_line)) {
+			if(rlit && llit && bop)
+				cb_warning_x (e, _("Expression '%s' %s '%s' is always FALSE"),llit,bop, rlit);
+			else
+				cb_warning_x (e, _("Expression is always FALSE"));
 		}
 		category = CB_CATEGORY_BOOLEAN;
 		return cb_false;
